// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton style params color brand 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
    data-testid="testStyleParams-color-brand"
  >
    <input
      class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
      tabindex="0"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-7m2j0v-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params color danger 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_danger QxRadioButton_position_left css-rx243e-QxRadioButton-root"
    data-testid="testStyleParams-color-danger"
  >
    <input
      class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
      tabindex="0"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-7m2j0v-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params color info 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_info QxRadioButton_position_left css-1cw23df-QxRadioButton-root"
    data-testid="testStyleParams-color-info"
  >
    <input
      class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
      tabindex="0"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-7m2j0v-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params color secondary 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_secondary QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
    data-testid="testStyleParams-color-secondary"
  >
    <input
      class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
      tabindex="0"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-7m2j0v-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params color success 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_success QxRadioButton_position_left css-1fv4f3x-QxRadioButton-root"
    data-testid="testStyleParams-color-success"
  >
    <input
      class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
      tabindex="0"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-7m2j0v-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params color warning 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_warning QxRadioButton_position_left css-cyehzm-QxRadioButton-root"
    data-testid="testStyleParams-color-warning"
  >
    <input
      class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
      tabindex="0"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-7m2j0v-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params disabled false 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
    data-testid="testStyleParams-disabled-false"
  >
    <input
      class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
      tabindex="0"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-7m2j0v-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params disabled true 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_position_left css-1md3zxc-QxRadioButton-root"
    data-testid="testStyleParams-disabled-true"
  >
    <input
      class="QxRadioButton-input css-pfwam-QxRadioButton-input"
      disabled=""
      tabindex="0"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-17vy97n-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-7m2j0v-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params position left 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
    data-testid="testStyleParams-position-left"
  >
    <input
      class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
      tabindex="0"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-7m2j0v-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params position right 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_right css-1aifzti-QxRadioButton-root"
    data-testid="testStyleParams-position-right"
  >
    <div
      class="QxRadioButton-content css-svhtdq-QxRadioButton-content"
    >
      Статус
    </div>
    <input
      class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
      tabindex="0"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params size large 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_large QxRadioButton_color_brand QxRadioButton_position_left css-1w9qhgk-QxRadioButton-root"
    data-testid="testStyleParams-size-large"
  >
    <input
      class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
      tabindex="0"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-tqvwll-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params size medium 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
    data-testid="testStyleParams-size-medium"
  >
    <input
      class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
      tabindex="0"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-7m2j0v-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params size small 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_small QxRadioButton_color_brand QxRadioButton_position_left css-1xfxno3-QxRadioButton-root"
    data-testid="testStyleParams-size-small"
  >
    <input
      class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
      tabindex="0"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-1mp9oqo-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;
